Fixed spacing

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -101,7 +101,7 @@ span {
 .funFacts{
     padding-top: 1%;
     background-color: #FAF9F6;
-    margin-top:7%;
+    margin-top:12%;
     height: 40vh;
     width: 100vw;
     border: 8px;
